--- a/src/main/resources/templates/admin/llaves/index.html
+++ b/src/main/resources/templates/admin/llaves/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Llaves del Torneo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <a th:href="@{/admin/home}">Regresar</a>
 
 <h1>Llaves del Torneo</h1>
-<p>Mensaje prueba</p>
+<div th:if="${exito}" class="alert alert-success w-25 text-center" role="alert" th:text="${exito}"></div>
+<div th:if="${error}" class="alert alert-danger w-25 text-center" role="alert" th:text="${error}"></div>
 
 <table th:if="${!#lists.isEmpty(llaves)}">
     <thead>
@@ -17,15 +19,32 @@
         <th>Karateca 2</th>
         <th>Ronda</th>
         <th>Ganador</th>
+        <th>Elegir ganador</th>
     </tr>
     </thead>
     <tbody>
-    <!-- Aquí se mostrarán las llaves dinámicamente -->
+
     <tr th:each="llave : ${llaves}">
         <td th:text="${llave.id_karateca1.nombre_completo}">Karateca 1</td>
-        <td th:text="${llave.id_karateca2 != null ? llave.id_karateca2.nombre_completo : 'BYE'}">Karateca 2</td>
+        <td th:text="${llave.id_karateca2 != null ? llave.id_karateca2.nombre_completo : 'No hay participante'}">Karateca 2</td>
         <td th:text="${llave.ronda}">Ronda</td>
-        <td th:text="${llave.ganador != null ? llave.ganador.nombre_completo : 'Por definir'}">Ganador</td>
+        <td>
+            <div th:if="${llave.ganador != null}" th:text="${llave.ganador.nombre_completo}"></div>
+        </td>
+        <td>
+            <div>
+                <form th:action="@{/admin/llaves/seleccionarGanador}" method="post" class="d-flex gap-2 align-items-center">
+                    <input type="hidden" th:name="idLlave" th:value="${llave.id}" />
+                    <select th:name="idGanador" class="form-select form-select-sm w-auto">
+                        <option value="" disabled selected>-- Seleccione --</option>
+                        <option th:value="${llave.id_karateca1.id}" th:text="${llave.id_karateca1.nombre_completo}"></option>
+                        <option th:if="${llave.id_karateca2 != null}"
+                                th:value="${llave.id_karateca2.id}" th:text="${llave.id_karateca2.nombre_completo}"></option>
+                    </select>
+                    <button type="submit" class="btn btn-primary btn-sm">Actualizar</button>
+                </form>
+            </div>
+        </td>
     </tr>
     </tbody>
 </table>
