--- a/src/main/resources/templates/admin/llaves/index.html
+++ b/src/main/resources/templates/admin/llaves/index.html
@@ -1,78 +1,93 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org"  xmlns:sd="http://www.thymeleaf.org/extras/spring-data">
 <head>
     <meta charset="UTF-8">
     <title>Llaves del Torneo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<a th:href="@{/admin/home}">Regresar</a>
+<a th:href="@{/admin/home}" class="btn btn-primary btn-sm">Regresar</a>
+<div class="container">
+    <h1>Llaves del Torneo</h1>
+    <div th:if="${exito}" class="alert alert-success w-25 text-center" role="alert" th:text="${exito}"></div>
+    <div th:if="${error}" class="alert alert-danger w-25 text-center" role="alert" th:text="${error}"></div>
 
-<h1>Llaves del Torneo</h1>
-<div th:if="${exito}" class="alert alert-success w-25 text-center" role="alert" th:text="${exito}"></div>
-<div th:if="${error}" class="alert alert-danger w-25 text-center" role="alert" th:text="${error}"></div>
+    <table th:if="${!#lists.isEmpty(llaves)}" class="table table-bordered">
+        <thead class="table-dark text-center">
+        <tr>
+            <th>Karateca 1</th>
+            <th>Karateca 2</th>
+            <th>Ronda</th>
+            <th>Ganador</th>
+            <th>Acciones</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="llave : ${llaves.content}"
+            th:classappend="${llave.estado == 'finalizado'} ? 'table-secondary' : ''">
 
-<table th:if="${!#lists.isEmpty(llaves)}" class="table table-bordered">
-    <thead class="table-dark text-center">
-    <tr>
-        <th>Karateca 1</th>
-        <th>Karateca 2</th>
-        <th>Ronda</th>
-        <th>Ganador</th>
-        <th>Acciones</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="llave : ${llaves}"
-        th:classappend="${llave.estado == 'finalizado'} ? 'table-secondary' : ''">
+            <!-- KARATECA 1 -->
+            <td th:text="${llave.id_karateca1.nombre_completo}"
+                th:classappend="${llave.ganador != null and llave.ganador.id == llave.id_karateca1.id} ? 'fw-bold text-success'">
+            </td>
 
-        <!-- Karateca 1 -->
-        <td th:text="${llave.id_karateca1.nombre_completo}"
-            th:classappend="${llave.ganador != null and llave.ganador.id == llave.id_karateca1.id} ? 'fw-bold text-success'">
-        </td>
+            <!-- KARATECA 2 -->
+            <td th:text="${llave.id_karateca2 != null ? llave.id_karateca2.nombre_completo : 'No hay participante'}"
+                th:classappend="${llave.ganador != null and llave.id_karateca2 != null and llave.ganador.id == llave.id_karateca2.id} ? 'fw-bold text-success'">
+            </td>
 
-        <!-- Karateca 2 -->
-        <td th:text="${llave.id_karateca2 != null ? llave.id_karateca2.nombre_completo : 'No hay participante'}"
-            th:classappend="${llave.ganador != null and llave.id_karateca2 != null and llave.ganador.id == llave.id_karateca2.id} ? 'fw-bold text-success'">
-        </td>
+            <!-- RONDA -->
+            <td th:text="${llave.ronda}"></td>
 
-        <!-- Ronda -->
-        <td th:text="${llave.ronda}"></td>
+            <!-- GANADOR -->
+            <td>
+                <span th:if="${llave.ganador != null}" th:text="${llave.ganador.nombre_completo}"></span>
+                <span th:if="${llave.ganador == null}">Por definir</span>
+            </td>
 
-        <!-- Ganador -->
-        <td>
-            <span th:if="${llave.ganador != null}" th:text="${llave.ganador.nombre_completo}"></span>
-            <span th:if="${llave.ganador == null}">Por definir</span>
-        </td>
+            <!-- CCIONES -->
+            <td>
+                <div th:if="${llave.estado == 'activo'}">
+                    <form th:action="@{/admin/llaves/seleccionarGanador}" method="post"
+                          class="d-flex gap-2">
 
-        <!-- Acciones -->
-        <td>
-            <div th:if="${llave.estado == 'activo'}">
-                <form th:action="@{/admin/llaves/seleccionarGanador}" method="post"
-                      class="d-flex gap-2 align-items-center justify-content-center">
+                        <input type="hidden" th:name="idLlave" th:value="${llave.id}" />
 
-                    <input type="hidden" th:name="idLlave" th:value="${llave.id}" />
+                        <select th:name="idGanador" class="form-select form-select-sm w-auto">
+                            <option value="" disabled th:selected="${llave.ganador == null}">-- Seleccione --</option>
+                            <option th:value="${llave.id_karateca1.id}" th:text="${llave.id_karateca1.nombre_completo}" th:selected="${llave.ganador == llave.id_karateca1}"></option>
+                            <option th:if="${llave.id_karateca2 != null}"
+                                    th:value="${llave.id_karateca2.id}" th:text="${llave.id_karateca2.nombre_completo}" th:selected="${llave.ganador== llave.id_karateca2}"></option>
+                        </select>
 
-                    <select th:name="idGanador" class="form-select form-select-sm w-auto">
-                        <option value="" disabled th:selected="${llave.ganador == null}">-- Seleccione --</option>
-                        <option th:value="${llave.id_karateca1.id}" th:text="${llave.id_karateca1.nombre_completo}" th:selected="${llave.ganador == llave.id_karateca1}"></option>
-                        <option th:if="${llave.id_karateca2 != null}"
-                                th:value="${llave.id_karateca2.id}" th:text="${llave.id_karateca2.nombre_completo}" th:selected="${llave.ganador== llave.id_karateca2}"></option>
-                    </select>
+                        <button type="submit" class="btn btn-primary btn-sm">Actualizar</button>
+                    </form>
+                </div>
 
-                    <button type="submit" class="btn btn-primary btn-sm">Actualizar</button>
-                </form>
-            </div>
+                <span th:if="${llave.estado == 'finalizado'}" class="text-muted text-center">Ronda finalizada</span>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <form method="post" th:action="@{/admin/llaves/generar}">
+        <button type="submit">Generar nuevas llaves</button>
+    </form>
 
-            <span th:if="${llave.estado == 'finalizado'}" class="text-muted fst-italic">Ronda finalizada</span>
-        </td>
-    </tr>
-    </tbody>
-</table>
+    <div class="row">
+        <div class="col-sm-6">
+            <div sd:pagination-summary="">info</div>
+        </div>
+        <div class="col-sm-6">
+            <nav class="pull-right">
+                <ul class="pagination" sd:pagination-split="7" sd:pagination="full">
+                    <!-- Pagination created by SpringDataDialect, this content is just for mockup -->
+                    <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                    <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 
-<form method="post" th:action="@{/admin/llaves/generar}">
-    <button type="submit">Generar nuevas llaves</button>
-</form>
-
+</div>
 </body>
 </html>
