--- a/src/main/resources/templates/admin/master.html
+++ b/src/main/resources/templates/admin/master.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="es" xmlns:th="http://www.thymeleaf.org"  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
+    <title th:fragment="titulo">No se ha vinculado</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+          background-color: #e0e0e0;
+        }
+    </style>
 </head>
 <body>
 
-<!-- NAVBAR COMÚN A TODAS LAS PÁGINAS -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
-    <a class="navbar-brand" th:href="@{/admin/home}">🏠 Inicio</a>
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-3">
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/admin/karatecas}">Karatecas</a>
-            </li>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
+    <a class="navbar-brand fw-bold" th:href="@{/admin/home}">🏆 Torneo Karate</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/admin/academias}">Academias</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/admin/karatecas}">Karatecas</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/admin/llaves}">Llaves</a>
             </li>
         </ul>
+
+        <div class="d-flex">
+            <a class="btn btn-light btn-sm" th:href="@{/admin/home}">Inicio</a>
+        </div>
     </div>
 </nav>
 
-<!-- CONTENIDO CAMBIANTE -->
-<div class="container mt-1" layout:fragment="contenido"></div>
-
+<div layout:fragment="contenido"></div>
+<di layout:fragment="scrpits"></di>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
