--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-layout:decorate="~{admin/master.html}">
+layout:decorate="~{master.html}">
 <head>
     <meta charset="UTF-8">
     <title>Panel de Administración</title>
@@ -55,6 +55,5 @@ layout:decorate="~{admin/master.html}">
 <div layout:fragment="scrpits">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </div>
-
 </body>
 </html>
