--- a/src/main/resources/templates/master.html
+++ b/src/main/resources/templates/master.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org"  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="es"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+>
 <head>
     <meta charset="UTF-8">
     <title th:fragment="titulo">No se ha vinculado</title>
@@ -20,19 +24,32 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto">
-            <li class="nav-item">
+            <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
                 <a class="nav-link" th:href="@{/admin/academias}">Academias</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
                 <a class="nav-link" th:href="@{/admin/karatecas}">Karatecas</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN')">
                 <a class="nav-link" th:href="@{/admin/llaves}">Llaves</a>
             </li>
         </ul>
 
-        <div class="d-flex">
-            <a class="btn btn-light btn-sm" th:href="@{/admin/home}">Inicio</a>
+        <div class="d-flex" sec:authorize="!isAuthenticated()">
+<!--            <a class="btn btn-light btn-sm" th:href="@{/admin/home}">Inicio</a>-->
+            <a class="btn btn-light btn-sm mx-3" href="/login">
+                Iniciar sesión
+            </a>
+            <a class="btn btn-light btn-sm" href="/registro">
+                Regístrate
+            </a>
+        </div>
+        <div class="d-flex" sec:authorize="isAuthenticated()">
+            <!--            <a class="btn btn-light btn-sm" th:href="@{/admin/home}">Inicio</a>-->
+            <p class="mx-3" sec:authentication="principal.nombre"></p>
+            <a class="btn btn-light btn-sm mx-3" href="/logout">
+                Cerrar Sesión
+            </a>
         </div>
     </div>
 </nav>
